security bug still there

--- a/app/views/emails/template.html
+++ b/app/views/emails/template.html
@@ -3,16 +3,33 @@
     <title></title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta content="width=320, target-densitydpi=device-dpi" name="viewport">
-    <style type="text/css">
-    #container{
-            max-width:600px;
-    }
-    .halfwidth{
-        width:49%;
-    }
+</head>
+<body style="background-color: #ECECEC;
+    margin: 0;
+    padding: 0;">
 
-    .showButton{
-        background-color: #2190DB;
+<div style="background-color:#EEE">
+    <div id="container" style="margin:auto; background-color:#FFF; max-width:600px; margin-top:30px;">
+        <div style="padding-bottom:1px; margin-top:10px; border-radius:6px 6px 0px 0px; -moz-border-radius: 6px 6px 0px 0px; -webkit-border-radius:6px 6px 0px 0px; -webkit-font-smoothing: antialiased; background-color:#53AF75;">
+            <p style="text-align:left; width: 100%; text-align: center;">
+                <strong>
+                    <img height="100" width="140" style="display:inline-block; vertical-align:top; margin-left:-20px; margin-right: 40px;" src="https://s3.amazonaws.com/solarmongo/public/img/SolarMongoLogo.png">
+                    <a style="margin-top:35px; display:inline-block;color: #FFFFFF;text-decoration: none; font-size:36px" href="http://www.solarmongo.com">
+                        <span label="Title" class="cm-singleline" style="font-family: 'Lucida Grande','Lucida Sans Unicode',Verdana,sans-serif;">#{Company}</span>
+                    </a>
+                </strong>
+            </p>
+        </div>
+        <div class="content_conatiner" style="padding:20px; text-align:center; margin:auto;">
+            <p align="left" style="color: #425470;
+    font-family: 'Lucida Grande','Lucida Sans Unicode',Verdana,sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-bottom: 18px;
+    margin-top: 0;">Streamline Your Solar Sales Proccess</p>
+            <div align="left" style="font-size: 13px; line-height: 18px; color: #444444; margin-top: 0px; margin-bottom: 18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;">
+                <p>Streamline your sales with the All-In-One Web and Mobile solution for solar companies.  Manage your solar business from anywhere with our mobile cloud solution. <a href="http://www.solarmongo.com/contact" class="showButton" style="color:white;background-color: #2190DB;
         border-radius: 5px;
         color: #FFFFFF;
         display: block;
@@ -22,150 +39,35 @@
         padding: 3px 0;
         text-align: center;
         transition: all 0.2s linear 0s;
-        width: 48%;
-    }
-    .showButton:hover{
-        background: none repeat scroll 0 0 #252528;
-    }
-    /* Mobile-specific Styles */
-    @media only screen and (max-width: 700px) { 
-        #container{
-            width:100%;
-        }
-        .halfwidth{
-            width:100%;
-        }
-    }
-
-    @media only screen and (max-width: 660px) { 
-
-    #headline p { font-size: 30px !important; }
-    .article-content, #left-sidebar{ -webkit-text-size-adjust: 90% !important; -ms-text-size-adjust: 90% !important; }
-    .header-content, .footer-content-left {-webkit-text-size-adjust: 80% !important; -ms-text-size-adjust: 80% !important;}
-    img { height: auto; line-height: 100%;}
-     } 
-
-    /* Client-specific Styles */
-    #outlook a { padding: 0; }  /* Force Outlook to provide a "view in browser" button. */
-    body { width: 100% !important; }
-    .ReadMsgBody { width: 100%; }
-    .ExternalClass { width: 100%; display:block !important; } /* Force Hotmail to display emails at full width */
-
-    /* Reset Styles */
-    /* Add 100px so mobile switch bar doesn't cover street address. */
-    body { background-color: #ececec; margin: 0; padding: 0; }
-    img { outline: none; text-decoration: none; display: block;}
-    br, strong br, b br, em br, i br { line-height:100%; }
-    h1, h2, h3, h4, h5, h6 { line-height: 100% !important; -webkit-font-smoothing: antialiased; }
-    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: blue !important; }
-    h1 a:active, h2 a:active,  h3 a:active, h4 a:active, h5 a:active, h6 a:active { color: red !important; }
-    /* Preferably not the same color as the normal header link color.  There is limited support for psuedo classes in email clients, this was added just for good measure. */
-    h1 a:visited, h2 a:visited,  h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited { color: purple !important; }
-    /* Preferably not the same color as the normal header link color. There is limited support for psuedo classes in email clients, this was added just for good measure. */  
-    .yshortcuts, .yshortcuts a, .yshortcuts a:link,.yshortcuts a:visited, .yshortcuts a:hover, .yshortcuts a span {
-    color: black; text-decoration: none !important; border-bottom: none !important; background: none !important;
-    }   /* Body text color for the New Yahoo.  This example sets the font of Yahoo's Shortcuts to black. */
-    /* This most probably won't work in all email clients. Don't include code blocks in email. */
-    code {
-      white-space: normal;
-      word-break: break-all;
-    }
-
-    #background-table { background-color: #ececec; }
-
-    /* Webkit Elements */
-    #top-bar { border-radius:6px 6px 0px 0px; -moz-border-radius: 6px 6px 0px 0px; -webkit-border-radius:6px 6px 0px 0px; -webkit-font-smoothing: antialiased; background-color: #556c90; color: #d9fffd; }
-    #top-bar a { font-weight: bold; color: #d9fffd; text-decoration: none;}
-
-    #footer { border-radius:0px 0px 6px 6px; -moz-border-radius: 0px 0px 6px 6px; -webkit-border-radius:0px 0px 6px 6px; -webkit-font-smoothing: antialiased; }
-
-    /* Fonts and Content */
-    body, td { font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif; }
-    .header-content, .footer-content-left, .footer-content-right { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; }
-    /* Prevent Webkit and Windows Mobile platforms from changing default font sizes on header and footer. */
-
-    .header-content { font-size: 12px; color: #d9fffd; }
-    .header-content a { font-weight: bold; color: #d9fffd; text-decoration: none; }
-
-    #headline p { color: #ffffff; font-family: 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif; font-size: 36px; text-align: center; margin-top:0px; margin-bottom:30px; }
-    #headline p a { color: #ffffff; text-decoration: none; }
-
-
-
-
-
-    .article-title { font-size: 18px; line-height:24px; color: #425470; font-weight:bold; margin-top:0px; margin-bottom:18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif; }
-    .article-title a { color: #c25130; text-decoration: none; }
-    .article-title.with-meta {margin-bottom: 0;}
-    .article-meta { font-size: 13px; line-height: 20px; color: #ccc; font-weight: bold; margin-top: 0;}
-
-
-    .article-content { font-size: 13px; line-height: 18px; color: #444444; margin-top: 0px; margin-bottom: 18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif; }
-    .article-content a { color: #3f6569; font-weight:bold; text-decoration:none; }
-    .article-content img { max-width: 100% }
-
-    .article-content ol, .article-content ul { margin-top:0px; margin-bottom:18px; margin-left:19px; padding:0; }
-    .article-content li { font-size: 13px; line-height: 18px; color: #444444; }
-    .article-content li a { color: #3f6569; text-decoration:underline; }
-
-    .article-content p {margin-bottom: 15px;}
-
-    .footer-content-left { font-size: 12px; line-height: 15px; color: #d9fffd; margin-top: 0px; margin-bottom: 15px; }
-    .footer-content-left a { color: #d9fffd; font-weight: bold; text-decoration: none; }
-
-    .footer-content-right { font-size: 11px; line-height: 16px; color: #d9fffd; margin-top: 0px; margin-bottom: 15px; }
-    .footer-content-right a { color: #d9fffd; font-weight: bold; text-decoration: none; }
-
-    #footer { background-color: #425470; color: #d9fffd; }
-    #footer a { color: #d9fffd; text-decoration: none; font-weight: bold; }
-
-    #permission-reminder { white-space: normal; }
-    #street-address { color: #d9fffd; white-space: normal; }
-    </style>
-    <!--[if gte mso 9]>
-    <style _tmplitem="40" >
-    .article-content ol, .article-content ul {
-       margin: 0 0 0 24px;
-       padding: 0;
-       list-style-position: inside;
-    }
-    </style>
-    <![endif]-->
-</head>
-<body>
-
-<div id="background-table">
-    <div id="container" style="margin:auto; background-color:#FFF">
-        <div style="padding-bottom:1px; margin-top:10px; border-radius:6px 6px 0px 0px; -moz-border-radius: 6px 6px 0px 0px; -webkit-border-radius:6px 6px 0px 0px; -webkit-font-smoothing: antialiased; background-color:#53AF75;">
-            <p style="text-align:left; width: 100%; text-align: center;">
-                <strong>
-                    <img height="100" width="140" style="display:inline-block; vertical-align:top; margin-left:-20px; margin-right: 40px;" src="https://s3.amazonaws.com/solarmongo/public/img/SolarMongoLogo.png">
-                    <a style="margin-top:35px; display:inline-block;color: #FFFFFF;text-decoration: none; font-size:36px" href="http://www.solarmongo.com">
-                        <span label="Title" class="cm-singleline">SolarMongo</span>
-                    </a>
-                </strong>
-            </p>
-        </div>
-        <div class="content_conatiner" style="padding:20px; text-align:center; margin:auto;">
-            <p align="left" class="article-title">Streamline Your Solar Sales Proccess</p>
-            <div align="left" class="article-content">
-                <p>Streamline your sales with the All-In-One Web and Mobile solution for solar companies.  Manage your solar business from anywhere with our mobile cloud solution. <a href="http://www.solarmongo.com/contact" class="showButton" style="color:white">Get A Demo!</a></p>
+        width: 48%;">Get A Demo!</a></p>
             </div>
-            <p align="left" class="article-title">Our Lead Dashboard</p>
-            <div align="center" class="article-content">
+            <p align="left" style="color: #425470;
+    font-family: 'Lucida Grande','Lucida Sans Unicode',Verdana,sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-bottom: 18px;
+    margin-top: 0;">Our Lead Dashboard</p>
+            <div align="center" style="font-size: 13px; line-height: 18px; color: #444444; margin-top: 0px; margin-bottom: 18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;">
                 <img border="0" src="http://www.solarmongo.com/img/macbook.png" >
             </div>
-            <div align="left" class="article-content">
+            <div align="left" style="font-size: 13px; line-height: 18px; color: #444444; margin-top: 0px; margin-bottom: 18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;">
                 <p>CRM (Customer Relationship Management)</p>
                 <p>Automated Control</p>
                 <p>Iphone and Ipad mobile Apps.</p>
             </div>
-            <p align="left" class="article-title">Our Mobile App</p>
-            <div align="left" class="halfwidth article-content" style="display:inline-block; vertical-align:top;">
+            <p align="left" style="color: #425470;
+    font-family: 'Lucida Grande','Lucida Sans Unicode',Verdana,sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-bottom: 18px;
+    margin-top: 0;">Our Mobile App</p>
+            <div align="left" style="font-size: 13px; line-height: 18px; color: #444444; margin-top: 0px; margin-bottom: 18px; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;display:inline-block; vertical-align:top; width:49%; display:inline-block;">
                 <p>Generate quotes and site survey's with our mobile apps</p>
                 <p>Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.  With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated.</p>
             </div>
-            <div align="center" class="article-content" style="width: 50%; display:inline-block;">
+            <div align="center" class="article-content" style="width: 49%; display:inline-block;">
                 <img width="300" border="0" editable="true" label="Image" src="http://www.solarmongo.com/img/ipad_dialog.jpg" class="w300">
             </div>
             
@@ -174,8 +76,11 @@
                             
                                 
     <div style="height:70px; padding-bottom:10px; margin-bottom:30px; border-radius:0px 0px 6px 6px; -moz-border-radius: 0px 0px 6px 6px; -webkit-border-radius:0px 0px 6px 6px; -webkit-font-smoothing: antialiased; background-color:#53AF75;">
-        <p align="center" class="footer-content-left" style="margin:auto; vertical-align:middle;">
-            <a style="text-align:center;position: relative;top: 30px;" lang="en" class="cm-preferences" href="http://www.solarmongo.com">SolarMongo.com</a>
+        <p align="center" style="top:30px; position:relative; margin:30px auto 0 auto; vertical-align:middle;">
+            <br />
+            <br />
+            <a style="position: relative; top: 30px; text-align:center; color: #D9FFFD;font-weight: bold;
+text-decoration: none;" href="http://www.solarmongo.com">SolarMongo.com</a>
         </p>
     </div>
     <!--<p align="left" class="footer-content-left"><a lang="en" class="cm-preferences" href="#">Edit your subscription</a> | <a class="cm-unsubscribe" href="#">Unsubscribe</a></p>-->
