--- a/app/views/pages/upload.hbs
+++ b/app/views/pages/upload.hbs
@@ -1,3 +1,4 @@
-<form action="...", method="post", enctype="multipart/form-data">
-	<input type="file" name="displayImage" />
+<form action="/mobile/upload" method="post" enctype="multipart/form-data" >
+	<input type="file" name="displayImage" id="image" />
+	<input type="submit" name="submit" />
 </form>
