--- a/app/views/pages/upload.hbs
+++ b/app/views/pages/upload.hbs
@@ -1,4 +1,4 @@
-<form action="/mobile/upload" method="post" enctype="multipart/form-data" >
+<form action="/mobile/upload/111111" method="post" enctype="multipart/form-data" >
 	<input type="file" name="photo" id="image" />
 	<input type="submit" name="submit" />
 </form>
