auth seems to be fixed

--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -164,7 +164,7 @@
                             <div class="field-box">
                                 <div class="col-md-6" ng-controller="DatepickerDemoCtrl">
                                     <p class="input-group">
-                                      <input show-button-bar="false" type="text" class="appointmentDate form-control" datepicker-popup="{{format}}" ng-model="lead.appointmentDate" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                                      <input show-button-bar="false" type="text" class="appointmentDate form-control" datepicker-popup="{{format}}" ng-model="lead.appointmentDate" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="false" close-text="Close" />
                                       <span class="input-group-btn">
                                         <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                       </span>
