trying to add tab history

--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -49,6 +49,7 @@
 <script type="text/javascript" src="/js/controllers/leads.js"></script>
 <script type="text/javascript" src="/js/controllers/products.js"></script>
 <script type="text/javascript" src="/js/controllers/account.js"></script>
+<script type="text/javascript" src="/js/controllers/tabs.js"></script>
 <script type="text/javascript" src="/js/controllers/users.js"></script>
 <script type="text/javascript" src="/js/controllers/photos.js"></script>
 <script type="text/javascript" src="/js/controllers/datepicker.js"></script>
