--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -25,10 +25,7 @@
                     <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="personal-info.html">Personal info</a></li>
-                    <li><a href="#">Account settings</a></li>
-                    <li><a href="#">Billing</a></li>
-                    <li><a href="#">Export your data</a></li>
+                    <li><a href="/#!/settings/mysettings">My Settings</a></li>
                     <li><a href="/signout">Sign Out</a></li>
                 </ul>
             </li>
