new changes to tabvs

--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -12,18 +12,17 @@
         </div>
     </div>
     <form class="form-horizontal" role="form" data-ng-submit="update()">
-        <div class="tabbable"> <!-- Only required for left/right tabs -->
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
-                <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
-                <li><a href="#tab3" data-toggle="tab">Photos</a></li>
-            </ul>
-            <div class="tab-content" id="tab-content">
-                <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/view/general.html'"></div>
-                <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
-                <div class="tab-pane" id="tab3" data-ng-include="'views/leads/view/gallery.html'"></div>
-            </div>
-        </div>
+        <tabset>
+            <tab heading="General" >
+                <div data-ng-include="'views/leads/view/general.html'"></div>
+            </tab>
+            <tab heading="Site Survey" >
+                <div data-ng-include="'views/leads/view/siteSurvey.html'"></div>
+            </tab>
+            <tab heading="Gallery" >
+                <div data-ng-include="'views/leads/view/gallery.html'"></div>
+            </tab>
+        </tabset>
         <div class="row header leads">
             <div class="row form-wrapper">
                 <div class="col-md-9">
