--- a/public/views/products/list.html
+++ b/public/views/products/list.html
@@ -7,6 +7,7 @@
             <!-- custom popup filter -->
             <!-- styles are located in css/elements.css -->
             <!-- script that enables this dropdown is located in js/theme.js -->
+            <!--
             <div class="ui-dropdown">
                 <div data-original-title="Click me!" class="head" data-toggle="tooltip" title="">
                     Filter products
@@ -41,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <a href="#!/products/create" class="btn btn-success pull-right">
                 <span>+</span>
