--- a/app/views/users/signup_admin.hbs
+++ b/app/views/users/signup_admin.hbs
@@ -48,11 +48,12 @@
 				              <div class="select-style ui-select col-md-5">
 				                <select required="" name="role">
 				                  <option value="">-- Select Role --</option>
-				                  <option value="Admin">Administrator</option>
-				                  <option value="Installer">Installer</option>
-				                  <option value="SalesRep">Sales Representative</option>
-				                  <option value="LeadsAgency">Leads Agency</option>
-				                  <option value="SalesAgency">Sales Agency</option>
+				                  <option value="admin">Administrator</option>
+				                  <option value="installer">Installer</option>
+				                  <option value="sales">Sales Representative</option>
+				                  <option value="leadAgency">Leads Agency</option>
+				                  <option value="salesAgency">Sales Agency</option>
+				                  <option value="superadmin">SuperAdmin</option>
 				                </select>
 				              </div>
 				            </div>
