testing alldata in products

--- a/public/views/products/list.html
+++ b/public/views/products/list.html
@@ -1,5 +1,5 @@
 <div id="pad-wrapper" class="users-list" data-ng-controller="ProductsController" data-ng-init="find()">
-    <div class="row header">
+    <div class="row header" data-ng-init="testBug()">
         <h3>Inventory</h3>
         <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
             <input class="col-md-4 search" data-ng-model="query" type="text" placeholder="Type a products's name...">
