--- a/public/views/settings/viewUser/user.html
+++ b/public/views/settings/viewUser/user.html
@@ -34,11 +34,11 @@
                         <div class="col-md-8">
                             <div class="select-style ui-select col-md-5">
                                 <select name="role" data-ng-model="user.role" required>
-                                    <option value="Admin">Administrator</option> 
-                                    <option value="Installer">Installer</option>
-                                    <option value="SalesRep">Sales Representative</option>
-                                    <option value="LeadsAgency">Leads Agency</option>
-                                    <option value="SalesAgency">Sales Agency</option>
+                                    <option value="admin">Administrator</option> 
+                                    <option value="installer">Installer</option>
+                                    <option value="sales">Sales Representative</option>
+                                    <option value="leadAgency">Leads Agency</option>
+                                    <option value="salesAgency">Sales Agency</option>
                                 </select>
                             </div>
                         </div> 
